--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </nav>
         </div>
         <!-- banner part -->
-        <!-- <div class="my-12">
+        <div class="my-12">
             <div class="lg:w-2/3 mx-auto space-y-5">
                 <h1 class="text-3xl md:text-5xl lg:text-7xl font-bold text-center">Apple Iphone 13 Pro Max</h1>
                 <p class="text-center">There are many variations of passages of Lorem Ipsum available, but the majority
@@ -62,7 +62,7 @@
             <div class="flex justify-center">
                 <img src="images/Group 48095420.png" alt="">
             </div>
-        </div> -->
+        </div>
     </header>
     <main>
         <!-- first-section -->
