--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     </header>
     <main>
         <!-- first-section -->
-        <!-- <section class="container mx-auto">
+        <section class="container mx-auto">
             <div class="my-24">
                 <h2 class="text-2xl md:text-4xl font-bold text-center">Search your phone</h2>
                 <div class="py-8">
@@ -90,7 +90,7 @@
                         All</button>
                 </div>
             </div>
-        </section> -->
+        </section>
         <!-- modal -->
         <div id="modal-container">
             
