--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             
         </div>
     </main>
-    <!-- <footer class="bg-[#0D6EFD] bg-opacity-5">
+    <footer class="bg-[#0D6EFD] bg-opacity-5">
         <section class="container mx-auto px-4 py-12">
             <div class="flex flex-col md:flex-row justify-between gap-6 py-6">
                 <div class="space-y-2">
@@ -144,7 +144,7 @@
                     <p>Careers</p>
                 </div>
             </div>
-        </section> -->
+        </section>
     </footer>
 
 
